--- a/tenzies/src/App.css
+++ b/tenzies/src/App.css
@@ -16,7 +16,7 @@ main {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   cursor: pointer;
 }
@@ -40,4 +40,22 @@ main {
 
 .die-num {
   font-size: 2rem;
+}
+
+.roll-dice {
+  height: 50px;
+  width: 100px;
+  border: none;
+  border-radius: 6px;
+  background-color: #5035FF;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
+}
+.roll-dice:focus {
+  outline: none;
+}
+
+.roll-dice:active {
+  box-shadow: 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
