--- a/tenzies/src/App.css
+++ b/tenzies/src/App.css
@@ -21,10 +21,23 @@ main {
   cursor: pointer;
 }
 
+.title {
+  font-size: 40px;
+  margin: 0;
+}
+
+.instruction {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  margin-top: 0;
+  text-align: center;
+}
+
 .dice-container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .die-face {
@@ -35,7 +48,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  cursor: pointer;
 }
 
 .die-num {
@@ -51,6 +64,7 @@ main {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.2rem;
+  cursor: pointer;
 }
 .roll-dice:focus {
   outline: none;
